--- a/portfolio.html
+++ b/portfolio.html
@@ -74,103 +74,101 @@
           </ul>
 
           <ul class="list-items">
-            <li>
+            <li class="list-box">
               <img
                 src="./img/img.jpg"
                 alt="Bank App"
                 width="360"
                 height="300"
               />
-              <h2 class="description container">
-                Banking App Interface Concept
-              </h2>
+              <h2 class="topic">Banking App Interface Concept</h2>
               <p class="item">App</p>
             </li>
 
-            <li>
+            <li class="list-box">
               <img
                 src="./img/img12.jpg"
                 alt="Payment"
                 width="360"
                 height="300"
               />
-              <h2 class="description container">Cashless Payment</h2>
+              <h2 class="topic">Cashless Payment</h2>
               <p class="item">Marketing</p>
             </li>
 
-            <li>
+            <li class="list-box">
               <img
                 src="./img/img-3.jpg"
                 alt="Meditaion App"
                 width="360"
                 height="300"
               />
-              <h2 class="description container">Meditaion App</h2>
+              <h2 class="topic">Meditaion App</h2>
               <p class="item">App</p>
             </li>
 
-            <li>
+            <li class="list-box">
               <img
                 src="./img/img-4.jpg"
                 alt="Taxi Service"
                 width="360"
                 height="300"
               />
-              <h2 class="description container">Taxi Service</h2>
+              <h2 class="topic">Taxi Service</h2>
               <p class="item">Marketing</p>
             </li>
 
-            <li>
+            <li class="list-box">
               <img
                 src="./img/img-5.jpg"
                 alt="Illustrations"
                 width="360"
                 height="300"
               />
-              <h2 class="description container">Screen Illustrations</h2>
+              <h2 class="topic">Screen Illustrations</h2>
               <p class="item">Design</p>
             </li>
 
-            <li>
+            <li class="list-box">
               <img
                 src="./img/img-6.jpg"
                 alt="Courses"
                 width="360"
                 height="300"
               />
-              <h2 class="description container">Online Courses</h2>
+              <h2 class="topic">Online Courses</h2>
               <p class="item">Marketing</p>
             </li>
-            <li>
+            <li class="list-box">
               <img
                 src="./img/img-7.jpg"
                 alt="Concept"
                 width="360"
                 height="300"
               />
-              <h2 class="container">Instagram Stories Concept</h2>
+              <h2 class="topic">Instagram Stories Concept</h2>
               <p class="item">Design</p>
             </li>
 
-            <li>
+            <li class="list-box">
               <img
                 src="./img/img-8.jpg"
                 alt="Organic Food"
                 width="360"
                 height="300"
               />
-              <h2 class="description container">Organic Food</h2>
+              <h2 class="topic">Organic Food</h2>
               <p class="item">Web Site</p>
             </li>
 
-            <li>
+            <li class="list-box">
               <img
                 src="./img/img-9.jpg"
                 alt="Fresh Coffee"
                 width="360"
                 height="300"
               />
-              <h2 class="description container">Fresh Coffee</h2>
+              <h2 class="topic">Fresh Coffee</h2>
               <p class="item">Web Site</p>
             </li>
           </ul>
