--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
           <a class="header-link link" href="">
             <span class="header-word">WEB</span>STUDIO</a
           >
-          <ul class="header-list list">
+          <ul class="header-list">
             <li class="header-item">
               <a class="header-link link" href="./index.html">Studio</a>
             </li>
@@ -36,7 +36,7 @@
             </li>
           </ul>
         </nav>
-        <ul class="header-list list">
+        <ul class="header-list">
           <li class="header-item">
             <a class="header-mail link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -56,19 +56,19 @@
         <div class="container">
           <h1 class="visually-hidden">Portfolio</h1>
           <ul class="list">
-            <li>
+            <li class="button-list">
               <button class="prev" type="button">All</button>
             </li>
-            <li>
+            <li class="button-list">
               <button class="next" type="button">Web Site</button>
             </li>
-            <li>
+            <li class="button-list">
               <button class="next" type="button">App</button>
             </li>
-            <li>
+            <li class="button-list">
               <button class="next" type="button">Design</button>
             </li>
-            <li>
+            <li class="button-list">
               <button class="next" type="button">Marketing</button>
             </li>
           </ul>
@@ -81,8 +81,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="topic">Banking App Interface Concept</h2>
-              <p class="item">App</p>
+              <div class="topic-item">
+                <h2 class="topic">Banking App Interface Concept</h2>
+                <p class="item">App</p>
+              </div>
             </li>
 
             <li class="list-box">
@@ -92,8 +94,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="topic">Cashless Payment</h2>
-              <p class="item">Marketing</p>
+              <div class="topic-item">
+                <h2 class="topic">Cashless Payment</h2>
+                <p class="item">Marketing</p>
+              </div>
             </li>
 
             <li class="list-box">
@@ -103,8 +107,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="topic">Meditaion App</h2>
-              <p class="item">App</p>
+              <div class="topic-item">
+                <h2 class="topic">Meditaion App</h2>
+                <p class="item">App</p>
+              </div>
             </li>
 
             <li class="list-box">
@@ -114,8 +120,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="topic">Taxi Service</h2>
-              <p class="item">Marketing</p>
+              <div class="topic-item">
+                <h2 class="topic">Taxi Service</h2>
+                <p class="item">Marketing</p>
+              </div>
             </li>
 
             <li class="list-box">
@@ -125,8 +133,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="topic">Screen Illustrations</h2>
-              <p class="item">Design</p>
+              <div class="topic-item">
+                <h2 class="topic">Screen Illustrations</h2>
+                <p class="item">Design</p>
+              </div>
             </li>
 
             <li class="list-box">
@@ -136,8 +146,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="topic">Online Courses</h2>
-              <p class="item">Marketing</p>
+              <div class="topic-item">
+                <h2 class="topic">Online Courses</h2>
+                <p class="item">Marketing</p>
+              </div>
             </li>
             <li class="list-box">
               <img
@@ -146,8 +158,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="topic">Instagram Stories Concept</h2>
-              <p class="item">Design</p>
+              <div class="topic-item">
+                <h2 class="topic">Instagram Stories Concept</h2>
+                <p class="item">Design</p>
+              </div>
             </li>
 
             <li class="list-box">
@@ -157,8 +171,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="topic">Organic Food</h2>
-              <p class="item">Web Site</p>
+              <div class="topic-item">
+                <h2 class="topic">Organic Food</h2>
+                <p class="item">Web Site</p>
+              </div>
             </li>
 
             <li class="list-box">
@@ -168,8 +184,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="topic">Fresh Coffee</h2>
-              <p class="item">Web Site</p>
+              <div class="topic-item">
+                <h2 class="topic">Fresh Coffee</h2>
+                <p class="item">Web Site</p>
+              </div>
             </li>
           </ul>
         </div>
