--- a/index.html
+++ b/index.html
@@ -11,184 +11,187 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
       <div class="container">
-      <nav class="header-navigation">
-        <a class="header-link link" href="">
-          <span class="header-word">WEB</span>STUDIO</a
-        >
-        <ul class="header-list list">
+        <nav class="header-navigation">
+          <a class="header-link link" href="">
+            <span class="header-word">WEB</span>STUDIO</a
+          >
+          <ul class="header-list">
+            <li class="header-item">
+              <a class="header-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="header-list">
           <li class="header-item">
-            <a class="header-link link" href="./index.html">Studio</a>
+            <a class="header-mail link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="header-item">
-            <a class="header-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="">Contacts</a>
+            <a class="header-tel link" href="tel:+11(000)1111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
-      </nav>
-      <ul class="header-list list">
-        <li class="header-item">
-          <a class="header-mail link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="header-item">
-          <a class="header-tel link" href="tel:+11(000)1111111"
-            >+11 (000) 111-11-11</a
-          >
-        </li>
-      </ul>
-    </div>
+      </div>
     </header>
 
     <main class="main">
       <section class="main-section">
         <div class="container">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button class="main-button" type="button">Order Service</button>
-      </div>
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <button class="main-button" type="button">Order Service</button>
+        </div>
       </section>
 
       <section class="section">
         <div class="container">
-        <ul class="section-list list">
-          <li class="section-item">
-            <h2 class="section-title">Strategy</h2>
-            <p class="section-parapraph">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
+          <ul class="section-list list">
+            <li class="section-item">
+              <h2 class="section-title">Strategy</h2>
+              <p class="section-paragraph">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
 
-          <li class="section-item">
-            <h2 class="section-title">Punctuality</h2>
-            <p class="section-parapraph">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="section-item">
-            <h2 class="section-title">Diligence</h2>
-            <p class="section-parapraph">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
+            <li class="section-item">
+              <h2 class="section-title">Punctuality</h2>
+              <p class="section-paragraph">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="section-item">
+              <h2 class="section-title">Diligence</h2>
+              <p class="section-paragraph">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
 
-          <li class="section-item">
-            <h2 class="section-title">Technologies</h2>
-            <p class="section-parapraph">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+            <li class="section-item">
+              <h2 class="section-title">Technologies</h2>
+              <p class="section-paragraph">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
 
       <section class="about">
         <div class="container">
-        <h2 class="title">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./img/img1/laptop.jpg"
-              alt="laptop"
-              width="360"
-              height="300"
-            />
-          </li>
+          <h2 class="title">What are we doing</h2>
+          <ul class="list">
+            <li>
+              <img
+                src="./img/img1/laptop.jpg"
+                alt="laptop"
+                width="360"
+                height="300"
+              />
+            </li>
 
-          <li>
-            <img
-              src="./img/img2/phone.jpg"
-              alt="phone"
-              width="360"
-              height="300"
-            />
-          </li>
+            <li>
+              <img
+                src="./img/img2/phone.jpg"
+                alt="phone"
+                width="360"
+                height="300"
+              />
+            </li>
 
-          <li>
-            <img
-              src="./img/img3/hand.jpg"
-              alt="hand"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
-      </div>
+            <li>
+              <img
+                src="./img/img3/hand.jpg"
+                alt="hand"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="team">
         <div class="container">
-        <h2 class="title">Our team</h2>
-        <ul class="list">
-          <li class="list-item">
-            <img
-              src="./img/img4/img.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-item">Mark Guerrero</h3>
-            <p class="title-paragraph">Product Designer</p>
-          </li>
+          <h2 class="title">Our team</h2>
+          <ul class="list">
+            <li class="list-item">
+              <img
+                src="./img/img4/img.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="title-item">Mark Guerrero</h3>
+              <p class="title-paragraph">Product Designer</p>
+            </li>
 
-          <li class="list-item">
-            <img
-              src="./img/img5/img.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-item">Tom Ford</h3>
-            <p class="title-paragraph">Frontend Developer</p>
-          </li>
+            <li class="list-item">
+              <img
+                src="./img/img5/img.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="title-item">Tom Ford</h3>
+              <p class="title-paragraph">Frontend Developer</p>
+            </li>
 
-          <li class="list-item">
-            <img
-              src="./img/img6/img.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-item">Camila Garcia</h3>
-            <p class="title-paragraph">Marketing</p>
-          </li>
+            <li class="list-item">
+              <img
+                src="./img/img6/img.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="title-item">Camila Garcia</h3>
+              <p class="title-paragraph">Marketing</p>
+            </li>
 
-          <li class="list-item">
-            <img
-              src="./img/img7/img-2.jpg"
-              alt="daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-item">Daniel Wilson</h3>
-            <p class="title-paragraph">UI Designer</p>
-          </li>
-        </ul>
+            <li class="list-item">
+              <img
+                src="./img/img7/img-2.jpg"
+                alt="daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="title-item">Daniel Wilson</h3>
+              <p class="title-paragraph">UI Designer</p>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
 
     <footer class="footer">
       <div class="container">
-      <a class="footer-link link" href="">
-        <span class="footer-word">WEB</span>STUDIO</a
-      >
-      <p class="footer-paragraph">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </div>
+        <a class="footer-link link" href="">
+          <span class="footer-word">WEB</span>STUDIO</a
+        >
+        <p class="footer-paragraph">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
