--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
             <li class="header-item">
               <a class="header-link link" href="./index.html">Studio</a>
             </li>
-            <li class="header-item">
+            <li class="h-item">
               <a class="header-link link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="header-item">
+            <li class="header-items">
               <a class="header-link link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
         <ul class="header-list">
-          <li class="header-item">
+          <li class="header-phone">
             <a class="header-mail link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="header-item">
+          <li class="tel">
             <a class="header-tel link" href="tel:+11(000)1111111"
               >+11 (000) 111-11-11</a
             >
@@ -61,7 +61,7 @@
 
       <section class="section">
         <div class="container">
-          <ul class="section-list list">
+          <ul class="section-list">
             <li class="section-item">
               <h2 class="section-title">Strategy</h2>
               <p class="section-paragraph">
