--- a/portfolio.html
+++ b/portfolio.html
@@ -28,21 +28,21 @@
             <li class="header-item">
               <a class="header-link link" href="./index.html">Studio</a>
             </li>
-            <li class="header-item">
+            <li class="h-item">
               <a class="header-link link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="header-item">
+            <li class="header-items">
               <a class="header-link link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
         <ul class="header-list">
-          <li class="header-item">
+          <li class="header-phone">
             <a class="header-mail link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="header-item">
+          <li class="tel">
             <a class="header-tel link" href="tel:+11(000)1111111"
               >+11 (000) 111-11-11</a
             >
@@ -52,7 +52,7 @@
     </header>
 
     <main class="main">
-      <section>
+      <section class="s-container">
         <div class="container">
           <h1 class="visually-hidden">Portfolio</h1>
           <ul class="list">
