--- a/index.html
+++ b/index.html
@@ -26,24 +26,24 @@
           >
           <ul class="header-list">
             <li class="header-item">
-              <a class="header-link link" href="./index.html">Studio</a>
+              <a class="header-link" href="./index.html">Studio</a>
             </li>
             <li class="h-item">
-              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+              <a class="header-link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="header-items">
-              <a class="header-link link" href="">Contacts</a>
+              <a class="header-link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
         <ul class="header-list">
           <li class="header-phone">
-            <a class="header-mail link" href="mailto:info@devstudio.com"
+            <a class="header-mail" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="tel">
-            <a class="header-tel link" href="tel:+11(000)1111111"
+            <a class="header-tel" href="tel:+11(000)1111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -141,8 +141,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="title-item">Mark Guerrero</h3>
-              <p class="title-paragraph">Product Designer</p>
+              <div class="squady">
+                <h3 class="title-item">Mark Guerrero</h3>
+                <p class="title-paragraph">Product Designer</p>
+              </div>
             </li>
 
             <li class="list-item">
@@ -152,8 +154,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="title-item">Tom Ford</h3>
-              <p class="title-paragraph">Frontend Developer</p>
+              <div class="squady">
+                <h3 class="title-item">Tom Ford</h3>
+                <p class="title-paragraph">Frontend Developer</p>
+              </div>
             </li>
 
             <li class="list-item">
@@ -163,8 +167,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="title-item">Camila Garcia</h3>
-              <p class="title-paragraph">Marketing</p>
+              <div class="squady">
+                <h3 class="title-item">Camila Garcia</h3>
+                <p class="title-paragraph">Marketing</p>
+              </div>
             </li>
 
             <li class="list-item">
@@ -174,8 +180,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="title-item">Daniel Wilson</h3>
-              <p class="title-paragraph">UI Designer</p>
+              <div class="squady">
+                <h3 class="title-item">Daniel Wilson</h3>
+                <p class="title-paragraph">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
