--- a/portfolio.html
+++ b/portfolio.html
@@ -26,24 +26,24 @@
           >
           <ul class="header-list">
             <li class="header-item">
-              <a class="header-link link" href="./index.html">Studio</a>
+              <a class="header-link" href="./index.html">Studio</a>
             </li>
             <li class="h-item">
-              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+              <a class="header-link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="header-items">
-              <a class="header-link link" href="">Contacts</a>
+              <a class="header-link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
         <ul class="header-list">
           <li class="header-phone">
-            <a class="header-mail link" href="mailto:info@devstudio.com"
+            <a class="header-mail" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="tel">
-            <a class="header-tel link" href="tel:+11(000)1111111"
+            <a class="header-tel" href="tel:+11(000)1111111"
               >+11 (000) 111-11-11</a
             >
           </li>
