--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
       <section class="s-container">
         <div class="container">
           <h1 class="visually-hidden">Portfolio</h1>
-          <ul class="list">
+          <ul class="snap">
             <li class="button-list">
               <button class="prev" type="button">All</button>
             </li>
